compiler/tests/should-pass/code-generation/SourceCommitmentDestLocal3.via
host alice : {A}
host bob   : {A}
host chuck : {A}

fun main() {
let $aliceLocal@Local(host = alice) = input int from alice;
let $aliceCommit@Commitment(receivers = {bob}, sender = alice) = $aliceLocal;
let $chuckDeclassified@Local(host = chuck) = $aliceCommit;
}
