compiler/tests/should-fail/InvalidProtocolAnnotation2.via
/* InvalidProtocolAnnotationError */

host alice
host bob

fun main() {
    val a: int@Local(host = bob) = input int from alice;
}
